src/objects/Campaign_Project_Record_Type_Map__mdt.object
<CustomObject>
    <description>Mapping of campaign project type, based upon various factor such as channel</description>
    <fields>
        <fullName>Active_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this setting value is active</description>
        <inlineHelpText>If this setting value is active</inlineHelpText>
        <label>Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Project_Type__c</fullName>
        <label>Campaign Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Standalone</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Mail_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Direct Marketing tab is required</description>
        <inlineHelpText>If Direct Marketing tab is required</inlineHelpText>
        <label>Direct Mail Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Email tab is required</description>
        <inlineHelpText>If Email tab is required</inlineHelpText>
        <label>Email Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Details_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Event Details Required</description>
        <inlineHelpText>Event Details Required</inlineHelpText>
        <label>Event Details Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Record Type Name</description>
        <inlineHelpText>Record Type Name</inlineHelpText>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Campaign Project Record Type Map</label>
    <pluralLabel>Campaign Project Record Type Map</pluralLabel>
</CustomObject>